--- a/package.json
+++ b/package.json
@@ -21,13 +21,9 @@
     "preview": "vite preview"
   },
   "devDependencies": {
-    "create-vue": "^3.6.1",
-    "vue": "^3.2.47",
-    "vue-router": "^4.1.6"
-  },
-  "dependencies": {
     "@vitejs/plugin-vue": "^4.0.0",
-    "axios": "^1.4.0",
-    "vite": "^4.1.4"
+    "create-vue": "^3.6.1",
+    "vite": "^4.1.4",
+    "vue": "^3.2.47"
   }
 }
