--- a/package.json
+++ b/package.json
@@ -20,12 +20,19 @@
   "scripts": {
     "dev": "vite --config demo.config.js",
     "build": "vite build --config vite.config.js",
-    "build-demo": "vite build --config demo.config.js --base=\"/coffeebrew_vue_components/\""
+    "build-demo": "vite build --config demo.config.js --base=\"/coffeebrew_vue_components/\"",
+    "test": "vitest __tests__ --config vitest.config.js",
+    "test-coverage": "vitest __tests__ --coverage --ui --api.port 51205 --config vitest.config.js"
   },
   "devDependencies": {
     "@vitejs/plugin-vue": "^4.2.3",
+    "@vitest/coverage-istanbul": "^0.32.4",
+    "@vitest/ui": "^0.32.4",
+    "@vue/test-utils": "^2.4.0",
     "create-vue": "^3.6.1",
+    "jsdom": "^22.1.0",
     "vite": "^4.1.4",
+    "vitest": "^0.32.4",
     "vue": "^3.2.47"
   }
 }
