--- a/package.json
+++ b/package.json
@@ -5,7 +5,6 @@
   "repository": "git@github.com-coffeebrewapps:coffeebrewapps/coffeebrew_vue_components.git",
   "author": "Coffee Brew Apps <coffeebrewapps@gmail.com>",
   "license": "MIT",
-  "type": "module",
   "files": [
     "dist"
   ],
@@ -30,6 +29,13 @@
     "@vitest/ui": "^0.32.4",
     "@vue/test-utils": "^2.4.0",
     "create-vue": "^3.6.1",
+    "eslint": "^8.44.0",
+    "eslint-config-standard": "^17.1.0",
+    "eslint-plugin-import": "^2.27.5",
+    "eslint-plugin-n": "^16.0.1",
+    "eslint-plugin-promise": "^6.1.1",
+    "eslint-plugin-vitest": "^0.2.6",
+    "eslint-plugin-vue": "^9.15.1",
     "jsdom": "^22.1.0",
     "vite": "^4.1.4",
     "vitest": "^0.32.4",
